2013-02-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.15 ========================
	* 

2012-09-11  Andreas Kupries  <andreask@activestate.com>

	* tar.tcl (seekorskip): Fixed seekorskip which prevented its use
	* pkgIndex.tcl: from a non-seekable channel, like stdin. The issue
	  was that the original attempt to seek before skipping not just
	  failed, but apparently still moved the read pointer in some way
	  which skipped over irreplacable input, breaking the next call of
	  readHeader. Using [tell] to check seekability does not break in
	  this manner. Bumped version to 0.7.1.

2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.14 ========================
	* 

2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.13 ========================
	* 

2011-01-20  Andreas Kupries  <andreask@activestate.com>

	* tar.tcl: [Bug 3162548]: Applied patch by Alexandre Ferrieux,
	* tar.man: extending various tar commands to be able to use
	* pkgIndex.tcl: the -chan option, and channels instead of files.
	  Version bumped to 0.7

2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 

2009-12-03  Andreas Kupries  <andreask@activestate.com>

	* tar.man: [Patch 2840147]. Applied. New options -prefix and
	* tar.tcl: -quick for tar::add. -prefix allows specifying a
	* tar.pcx: prefix for filenames in the archive, and -quick 1
	* pkgIndex.tcl: changes back to the seek-from-end algorithm for
	  finding the place where to add the new files. The new default
	  scans from start (robust). Bumped version to 0.6.

2009-05-12  Aaron Faupell  <afaupell@users.sourceforge.net>

	* tar.tcl: add support for reading pre-posix archives.
	  if a file isnt writable when extracting, try deleting
	  before giving up.
